--- a/public/Dashboard/User/user.html
+++ b/public/Dashboard/User/user.html
@@ -27,7 +27,7 @@
   <div id="wrapper">
 
     <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-gradient-dark sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dashboard">
@@ -68,12 +68,6 @@
           <span>11 Inicial</span></a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="/dashboard/historico">
-          <i class="fas fa-fw fa-history"></i>
-          <span>Histórico</span></a>
-      </li>
-
       <!-- Divider -->
       <hr class="sidebar-divider">
 
@@ -100,6 +94,27 @@
         <a class="nav-link" href="/dashboard/novidades">
           <i class="fas fa-fw fa-globe"></i>
           <span>Novidades</span></a>
+      </li>
+
+      <!-- Divider -->
+      <hr class="sidebar-divider">
+
+      <!-- Heading -->
+      <div class="sidebar-heading">
+        Clube
+      </div>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard/embreve">
+          <i class="fas fa-store"></i>
+          <span>Loja</span></a>
+      </li>
+
+      <!-- Nav Item - Charts -->
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard/embreve">
+          <i class="fas fa-handshake"></i>
+          <span>Sócios</span></a>
       </li>
 
       <!-- Divider -->
@@ -228,7 +243,7 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
-
+          
           <h1>Perfil</h1>
 
           <form>
