--- a/public/Dashboard/Apostas/inicialv2.html
+++ b/public/Dashboard/Apostas/inicialv2.html
@@ -86,6 +86,73 @@
   height:21vw;
   cursor: pointer;
 }
+
+.playerPointsValue{
+  position:absolute;
+  right:10%;
+  top:5%;
+  padding: 1px 3px 1px 3px;
+  font-size: 1.1vw;
+}
+
+.playerCardStats{
+  position: absolute;
+  display: none;
+  bottom:25%;
+  left:50%;
+  width:80%;
+  height:auto;
+  color:#fff;
+  padding-bottom: 0;
+  transform: translateX(-50%);
+  background:rgba(30,30,30,0.7);
+}
+.playerCardStatsOut{
+  position: absolute;
+  display: none;
+  bottom:3%;
+  left:50%;
+  width:80%;
+  height:auto;
+  color:#fff;
+  padding-bottom: 0;
+  transform: translateX(-50%);
+  background:rgba(30,30,30,0.7);
+}
+.playerCard:hover > .playerCardStats{
+  display:block;
+  animation: fade 0.2s;
+}
+.playerCardOut:hover > .playerCardStatsOut{
+  display:block;
+  animation: fade 0.2s;
+}
+@keyframes fade {
+  /* 0%   {
+    background:rgba(30,30,30,0);
+    color:rgba(30,30,30,0);
+  }
+  50%  {
+    background:rgba(30,30,30,0.7);
+    color:rgba(0,0,0,0);
+  }
+  100%  {
+    background:rgba(30,30,30,0.7);
+    color:rgba(255,255,255,1); */
+  0%   {
+    height:0px;
+    color:rgba(0, 0, 0, 0)
+  }
+  60%   {
+    color:rgba(255,255,255, 0)
+  }
+  100%  {
+    height:40px;
+    color:rgba(255,255,255, 1)
+  }
+}
+
+
   </style>
 
 
@@ -138,12 +205,6 @@
           <span>11 Inicial</span></a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="/dashboard/historico">
-          <i class="fas fa-fw fa-history"></i>
-          <span>Histórico</span></a>
-      </li>
-
       <!-- Divider -->
       <hr class="sidebar-divider">
 
@@ -170,6 +231,27 @@
         <a class="nav-link" href="/dashboard/novidades">
           <i class="fas fa-fw fa-globe"></i>
           <span>Novidades</span></a>
+      </li>
+
+      <!-- Divider -->
+      <hr class="sidebar-divider">
+
+      <!-- Heading -->
+      <div class="sidebar-heading">
+        Clube
+      </div>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard/embreve">
+          <i class="fas fa-store"></i>
+          <span>Loja</span></a>
+      </li>
+
+      <!-- Nav Item - Charts -->
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard/embreve">
+          <i class="fas fa-handshake"></i>
+          <span>Sócios</span></a>
       </li>
 
       <!-- Divider -->
@@ -302,7 +384,7 @@
           <table class="table table-bordered table-hover">
             <thead class="thead-dark">
               <tr>
-                <th scope="col">Resultados</th>
+                <th scope="col">11 Inicial</th>
               </tr>
             </thead>
             <tbody id="tableBody">
@@ -336,6 +418,7 @@
                     <div class="col-2">
                       <img id="foraImg" src="" class="p-1 w-100 border bg-secondary rounded">
                     </div>
+                    <div id="jogoIdTable" style="display:none"></div>
                   </div>
                 </div></td>
               </tr>
@@ -411,6 +494,7 @@
               <div class="col-2">
                 <img id="foraImg" src="" class="p-1 w-100 border bg-secondary rounded">
               </div>
+              <div id="jogoId" style="display:none"></div>
             </div>
             <h class="h4 mt-4">Escolha os Jogadores:</h>
             <div class="row border border-dark"  style="background-image: url('/static/img/topviewgrass.jpg');background-repeat:repeat;background-size: 150px;">
@@ -498,14 +582,18 @@
       <p class="text-center h4 text-white"></p>
       <div id="imgCamisola" style="display: none;">-1</div>
     </div>
-    <div id="cloneJogadorCartaCom">
-      <img class="img-respnsive border border-dark inicialImages" src="/static/img/Jogadores/joaoFlavio.jpg">
+    <div id="cloneJogadorCartaCom" class="playerCard">
+      <img class="img-respnsive border border-dark inicialImages" src="">
       <p class="text-center h4 text-white"></p>
+      <div class="border rounded bg-secondary text-white playerPointsValue">+5</div>
+      <div id="playerCardName" class="playerCardStats text-center">Manuel Cardozo</div>
       <div id="imgCamisola" style="display: none;">-1</div>
     </div>
     <div id="cloneJogadorCollapse">
-      <div class="col-4 p-1" data-toggle="collapse" data-target="#collapseAs" aria-expanded="false" aria-controls="collapseAs">
-        <img class="img-respnsive border border-dark inicialImagesCollapse" src="/static/img/Jogadores/joaoFlavio.jpg">
+      <div class="col-4 p-1 playerCardOut" data-toggle="collapse" data-target="#collapseAs" aria-expanded="false" aria-controls="collapseAs">
+        <img class="img-respnsive border border-dark inicialImagesCollapse" src="">
+        <div class="border rounded bg-secondary text-white playerPointsValue">+5</div>
+        <div id="playerCardName" class="playerCardStatsOut text-center">Manuel Cardozo</div>
       </div>
     </div>
   </div>
@@ -530,7 +618,7 @@
       })
     .forEach(elem => {
       let e = elem[1];
-      //console.log(e);
+      console.log(e);
       let c = document.querySelector("#sampleRow").cloneNode(true);
       c.id="";
       c.style.display = 'flex';
@@ -560,6 +648,7 @@ const setMatchModal = (e) => {
   c.querySelector("#fora").innerHTML = e.fora;
   c.querySelector("#casaImg").src = e.casaImg;
   c.querySelector("#foraImg").src = e.foraImg;
+  c.querySelector("#jogoId").innerHTML = e.id;
   c.querySelector("#fazerApostaBtn").onclick=()=>fazerAposta(e.id);
   //let data = {aposta:["-1","-1","-1","-1","-1","-1","-1","-1","-1","-1","-1"]};
   mRequest({method:'POST',url:'/database/user/inicial/apostas',data:{id:e.id}},(data)=>{
@@ -589,6 +678,7 @@ const setMatchModal = (e) => {
                 data[1][i].pos=='gr'?'GR':console.log('Player Posicions bad error');
       let c = document.querySelector("#cloneJogadorCollapse").cloneNode(true);
       c.querySelector("img").src="/static/img/Jogadores/"+data[1][i].camisola+".jpg";
+      c.querySelector("#playerCardName").innerHTML = data[1][i].id;
       c.children[0].dataset.target="#collapse"+pos[0]+"s";
       c.querySelector("img").onclick = () => {
         let n = data[1][i].camisola;
@@ -611,7 +701,9 @@ const fazerAposta = () => {
   for(let i=0;i<11;i++){
     data.push(document.querySelector("#posicao"+i).querySelector("#imgCamisola").innerHTML);
   }
-  mRequest({method:'POST',url:'/database/user/inicial/apostar',data:{data:data}},(res)=>{
+  console.log(data);
+  let id = document.querySelector("#jogoId").innerHTML;
+  mRequest({method:'POST',url:'/database/user/inicial/apostar',data:{id:id,data:data}},(res)=>{
     console.log(res);
     alert(res.text);
   })
