--- a/public/Dashboard/Dashboard.html
+++ b/public/Dashboard/Dashboard.html
@@ -67,12 +67,6 @@
           <span>11 Inicial</span></a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="/dashboard/historico">
-          <i class="fas fa-fw fa-history"></i>
-          <span>Histórico</span></a>
-      </li>
-
       <!-- Divider -->
       <hr class="sidebar-divider">
 
@@ -99,6 +93,27 @@
         <a class="nav-link" href="/dashboard/novidades">
           <i class="fas fa-fw fa-globe"></i>
           <span>Novidades</span></a>
+      </li>
+
+      <!-- Divider -->
+      <hr class="sidebar-divider">
+
+      <!-- Heading -->
+      <div class="sidebar-heading">
+        Clube
+      </div>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard/embreve">
+          <i class="fas fa-store"></i>
+          <span>Loja</span></a>
+      </li>
+
+      <!-- Nav Item - Charts -->
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard/embreve">
+          <i class="fas fa-handshake"></i>
+          <span>Sócios</span></a>
       </li>
 
       <!-- Divider -->
@@ -228,9 +243,62 @@
         <!-- Begin Page Content -->
         <div class="container-fluid">
 
+          <h class="h2">Manual</h><br><br><br>
+          
+          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/proximo" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Próximo Jogo</a> - O utilizador pode fazer a análise do próximo jogo do Mourisquense visto que nesta
+            parte estão inseridas todas as estatísticas de ambas a equipas (UDM e adversário) comparadas, pode
+            também ver qual será o horário e data do jogo.</p>
+
+          <h class="h4">Apostas</h>
+
+          <p>Nesta estão introduzidas as categorias que permitem fazer apostas com o objetivo de
+            maximizar os seus pontos, os jogos para breve serão aqui apresentados.</p>
+
+          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/resultado" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Resultado</a>
+            - Nesta categoria apostasse no resultado ao intervalo e/ou no final do jogo.</p>
+
+          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/inicial" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">11 Inicial</a>
+            - Nesta página o utilizador vai tentar entrar na cabeça do treinador e adivinhar qual será o
+            11 inicial, sendo que umas posições valem mais pontos que outras mais fáceis de prever.</p>
+
+          <h class="h4">Tabelas</h>
+
+          <p>Espaço destinado a dados do clube, onde se pode informar e confirmar sobre tudo o que está a
+            acontecer na época presente.</p>
+
+          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/classificacao" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Classificação</a>
+            - Através de uma tabela da liga em que o Mourisquense está a participar o utilizador
+            pode saber a classificação e estatísticas do UDM, assim como dos seus adversários.</p>
+
+          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/jogadores" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Jogadores</a>
+            - Lista de todos os jogadores representantes do plantel sénior. Pode também adquirir a
+            informação detalhada de todos estes jogadores.</p>
+
+          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/novidades" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Novidades</a>
+            - Nesta página estarão disponíveis notícias do clube, como por exemplo contratações ou
+            o resultado dos jogos. Também lhe é dada a hipótese de gostar e/ou comentar os “Post’s” para que
+            possamos contar com a sua opinião sobre o tema.</p>
+
+          <h class="h4">Clube</h>
+
+          <p><a class="font-weight-bold">Disponível Em Breve</a>, este espaço será utilizado para atividades relacionadas ao suporte monetário à
+            equipa..</p>
+
+          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/embreve" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Loja</a>
+            - Poderá comprar itens que o clube tenha a vender tais como peças de vestuário ou objetos de
+            apoio ao clube “bandeiras”.</p>
+
+          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/embreve" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Sócios</a>
+            - Os sócios que queiram atualizar o pagamento das quotas ou os adeptos que queiram se
+            tornar sócios poderão em breve fazê-lo online.</p>
+
+          <h class="h4">Acerca de</h>
+
+          <p>Nesta aba poderá ver a <a class="h6 font-weight-bold text-secondary" href="/dashboard/mourisquense" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">história do clube</a> detalhada e com algumas curiosidades, assim como, a
+            <a class="h6 font-weight-bold text-secondary" href="/dashboard/historia" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">história dos criadores</a> deste Web Site.</p>
+
         </div>
         <!-- End Page Content -->
-
       </div>
       <!-- End of Main Content -->
 
